# playing_with_cpp

./: Dockerfile  README.md  run.sh
cpp_exercises/concept_interfaces/: CMakeLists.txt  build.sh  example_interface_01.cpp
